--- a/zjazd-2/Cw1/Cw1/Cw1.csproj
+++ b/zjazd-2/Cw1/Cw1/Cw1.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
