--- a/zjazd-7/Cw3/appsettings.json
+++ b/zjazd-7/Cw3/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SecretKey" :  "fsadf0ds9f9ds0f90-a9f0a9sm0-f9as8f9san88df7"
 }
