--- a/zjazd-11/zjazd-11/zjazd-11/appsettings.json
+++ b/zjazd-11/zjazd-11/zjazd-11/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection" :  "Data Source=db-mssql;Initial Catalog=s16852;Integrated Security=True"
+  }
 }
