PrescriptionMedicament doube PK FIXED

--- a/zjazd-11/zjazd-11/zjazd-11/zjazd-11.csproj
+++ b/zjazd-11/zjazd-11/zjazd-11/zjazd-11.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200601093629_initial-Data.cs" />
+    <Compile Remove="Migrations\20200601093629_initial-Data.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Views\" />
   </ItemGroup>
