--- a/zjazd-11/zjazd-11/zjazd-11/zjazd-11.csproj
+++ b/zjazd-11/zjazd-11/zjazd-11/zjazd-11.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200601093629_initial-Data.cs" />
     <Compile Remove="Migrations\20200601093629_initial-Data.Designer.cs" />
+    <Compile Remove="Migrations\20200601093908_initial-Data.cs" />
+    <Compile Remove="Migrations\20200601093908_initial-Data.Designer.cs" />
+    <Compile Remove="Migrations\20200601101627_FixTypesAndSeedData.cs" />
+    <Compile Remove="Migrations\20200601101627_FixTypesAndSeedData.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
